--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,15 +12,26 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <!--        <activity android:name=".RegistrationActivity">-->
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.MAIN" />-->
+
+<!--                <category android:name="android.intent.category.LAUNCHER" />-->
+<!--            </intent-filter>-->
+<!--        </activity>-->
+<!--        <activity android:name=".GoogleSignInActivity" />-->
+
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
-            android:value="@string/app_id"/>
-
-        <!--Include the AdActivity configChanges and theme. -->
+            android:value="@string/app_id" />
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" /> <!-- Include the AdActivity configChanges and theme. -->
         <activity
             android:name="com.google.android.gms.ads.AdActivity"
             android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
             android:theme="@android:style/Theme.Translucent" />
+
         <receiver android:name=".FavouriteWidget">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
@@ -30,16 +41,19 @@
                 android:name="android.appwidget.provider"
                 android:resource="@xml/favourite_widget_info" />
         </receiver>
-        <service android:name=".FavouriteWidgetService"
-            android:permission="android.permission.BIND_REMOTEVIEWS"/>
+        <service android:name="MyFirebaseMessagingService">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
+        <service
+            android:name=".FavouriteWidgetService"
+            android:permission="android.permission.BIND_REMOTEVIEWS" />
+
         <activity
             android:name=".SettingsActivity"
-            android:parentActivityName=".MainActivity">
-
-        </activity>
-        <activity android:name=".DetailActivity">
-
-        </activity>
+            android:parentActivityName=".MainActivity" />
+        <activity android:name=".DetailActivity" />
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
